{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 243,
  "lineage": "0ef333ce-663b-3775-d075-b86df90baaf9",
  "resources": [
    {
      "module": "module.cloud_router[\"cloud-router1\"]",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-26T09:50:37.034-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/saranshg-test/regions/us-central1/routers/cloud-router1",
            "name": "cloud-router1",
            "network": "https://www.googleapis.com/compute/v1/projects/saranshg-test/global/networks/host-network-1",
            "project": "saranshg-test",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/saranshg-test/regions/us-central1/routers/cloud-router1"
          },
          "dependencies": [
            "module.vpc-host.google_compute_global_address.psa_ranges",
            "module.vpc-host.google_compute_network.network",
            "module.vpc-host.google_compute_network_attachment.default",
            "module.vpc-host.google_compute_network_peering.local",
            "module.vpc-host.google_compute_network_peering.remote",
            "module.vpc-host.google_compute_network_peering_routes_config.psa_routes",
            "module.vpc-host.google_compute_route.gateway",
            "module.vpc-host.google_compute_route.ilb",
            "module.vpc-host.google_compute_route.instance",
            "module.vpc-host.google_compute_route.ip",
            "module.vpc-host.google_compute_route.vpn_tunnel",
            "module.vpc-host.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc-host.google_compute_shared_vpc_service_project.service_projects",
            "module.vpc-host.google_compute_subnetwork.private_nat",
            "module.vpc-host.google_compute_subnetwork.proxy_only",
            "module.vpc-host.google_compute_subnetwork.psc",
            "module.vpc-host.google_compute_subnetwork.subnetwork",
            "module.vpc-host.google_compute_subnetwork_iam_binding.authoritative",
            "module.vpc-host.google_compute_subnetwork_iam_binding.bindings",
            "module.vpc-host.google_compute_subnetwork_iam_member.bindings",
            "module.vpc-host.google_dns_policy.default",
            "module.vpc-host.google_network_connectivity_policy_based_route.default",
            "module.vpc-host.google_service_networking_connection.psa_connection",
            "module.vpc-host.google_service_networking_peered_dns_domain.name"
          ]
        }
      ]
    },
    {
      "module": "module.cloud_router[\"cloud-router1\"]",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nats",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "my-nat-gateway",
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "saranshg-test/us-central1/cloud-router1/my-nat-gateway",
            "log_config": [
              {
                "enable": true,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-nat-gateway",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "saranshg-test",
            "region": "us-central1",
            "router": "cloud-router1",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "projects/saranshg-test/regions/us-central1/subnetworks/subnetwork-1",
                "source_ip_ranges_to_nat": [
                  "PRIMARY_IP_RANGE"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.cloud_router.google_compute_router.router",
            "module.vpc-host.google_compute_global_address.psa_ranges",
            "module.vpc-host.google_compute_network.network",
            "module.vpc-host.google_compute_network_attachment.default",
            "module.vpc-host.google_compute_network_peering.local",
            "module.vpc-host.google_compute_network_peering.remote",
            "module.vpc-host.google_compute_network_peering_routes_config.psa_routes",
            "module.vpc-host.google_compute_route.gateway",
            "module.vpc-host.google_compute_route.ilb",
            "module.vpc-host.google_compute_route.instance",
            "module.vpc-host.google_compute_route.ip",
            "module.vpc-host.google_compute_route.vpn_tunnel",
            "module.vpc-host.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc-host.google_compute_shared_vpc_service_project.service_projects",
            "module.vpc-host.google_compute_subnetwork.private_nat",
            "module.vpc-host.google_compute_subnetwork.proxy_only",
            "module.vpc-host.google_compute_subnetwork.psc",
            "module.vpc-host.google_compute_subnetwork.subnetwork",
            "module.vpc-host.google_compute_subnetwork_iam_binding.authoritative",
            "module.vpc-host.google_compute_subnetwork_iam_binding.bindings",
            "module.vpc-host.google_compute_subnetwork_iam_member.bindings",
            "module.vpc-host.google_dns_policy.default",
            "module.vpc-host.google_network_connectivity_policy_based_route.default",
            "module.vpc-host.google_service_networking_connection.psa_connection",
            "module.vpc-host.google_service_networking_peered_dns_domain.name"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules_ingress_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "allow-memorystore-connect",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6379"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-26T09:50:35.492-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/saranshg-test/global/firewalls/allow-memorystore-connect",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "allow-memorystore-connect",
            "network": "https://www.googleapis.com/compute/v1/projects/saranshg-test/global/networks/host-network-1",
            "priority": 1000,
            "project": "saranshg-test",
            "self_link": "https://www.googleapis.com/compute/v1/projects/saranshg-test/global/firewalls/allow-memorystore-connect",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-host.google_compute_global_address.psa_ranges",
            "module.vpc-host.google_compute_network.network",
            "module.vpc-host.google_compute_network_peering.local",
            "module.vpc-host.google_compute_network_peering.remote",
            "module.vpc-host.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc-host.google_compute_shared_vpc_service_project.service_projects",
            "module.vpc-host.google_service_networking_connection.psa_connection"
          ]
        },
        {
          "index_key": "allow-ssh-ingress-shared",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-26T09:50:35.494-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/saranshg-test/global/firewalls/allow-ssh-ingress-shared",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "allow-ssh-ingress-shared",
            "network": "https://www.googleapis.com/compute/v1/projects/saranshg-test/global/networks/host-network-1",
            "priority": 1000,
            "project": "saranshg-test",
            "self_link": "https://www.googleapis.com/compute/v1/projects/saranshg-test/global/firewalls/allow-ssh-ingress-shared",
            "source_ranges": [
              "10.88.0.0/16",
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-host.google_compute_global_address.psa_ranges",
            "module.vpc-host.google_compute_network.network",
            "module.vpc-host.google_compute_network_peering.local",
            "module.vpc-host.google_compute_network_peering.remote",
            "module.vpc-host.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc-host.google_compute_shared_vpc_service_project.service_projects",
            "module.vpc-host.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.simple-vm-example[\"vm1\"]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20240815",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/bkailash/zones/us-central1-a/disks/my-vm-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Managed by the compute-vm Terraform module.",
            "enable_display": false,
            "id": "projects/bkailash/zones/us-central1-a/instances/my-vm-1",
            "instance_id": "7652829974430289073",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "startup-script": "#!/bin/bash\n\n# Update package lists\nsudo apt-get update -y\n\n# Install Redis tools and telnet\nsudo apt-get install -y redis-tools telnet "
            },
            "metadata_fingerprint": "dLY4rS_6mmk=",
            "name": "my-vm-1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/saranshg-test/global/networks/host-network-1",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/saranshg-test/regions/us-central1/subnetworks/subnetwork-1",
                "subnetwork_project": "saranshg-test"
              }
            ],
            "project": "bkailash",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/bkailash/zones/us-central1-a/instances/my-vm-1",
            "service_account": [
              {
                "email": "599025280776-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.simple-vm-example.google_compute_disk.boot",
            "module.simple-vm-example.google_compute_disk.disks",
            "module.simple-vm-example.google_compute_region_disk.disks",
            "module.simple-vm-example.google_compute_resource_policy.schedule",
            "module.simple-vm-example.google_service_account.service_account",
            "module.vpc-host.google_compute_global_address.psa_ranges",
            "module.vpc-host.google_compute_network.network",
            "module.vpc-host.google_compute_network_peering.local",
            "module.vpc-host.google_compute_network_peering.remote",
            "module.vpc-host.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc-host.google_compute_shared_vpc_service_project.service_projects",
            "module.vpc-host.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-host[0]",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Terraform-managed.",
            "enable_ula_internal_ipv6": false,
            "id": "projects/saranshg-test/global/networks/host-network-1",
            "mtu": 0,
            "name": "host-network-1",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5217070926136413379",
            "project": "saranshg-test",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/saranshg-test/global/networks/host-network-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc-host[0]",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "private-googleapis",
          "schema_version": 0,
          "attributes": {
            "description": "Terraform-managed.",
            "dest_range": "199.36.153.8/30",
            "id": "projects/saranshg-test/global/routes/host-network-1-private-googleapis",
            "name": "host-network-1-private-googleapis",
            "network": "https://www.googleapis.com/compute/v1/projects/saranshg-test/global/networks/host-network-1",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/saranshg-test/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "saranshg-test",
            "self_link": "https://www.googleapis.com/compute/v1/projects/saranshg-test/global/routes/host-network-1-private-googleapis",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-host.google_compute_network.network"
          ]
        },
        {
          "index_key": "restricted-googleapis",
          "schema_version": 0,
          "attributes": {
            "description": "Terraform-managed.",
            "dest_range": "199.36.153.4/30",
            "id": "projects/saranshg-test/global/routes/host-network-1-restricted-googleapis",
            "name": "host-network-1-restricted-googleapis",
            "network": "https://www.googleapis.com/compute/v1/projects/saranshg-test/global/networks/host-network-1",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/saranshg-test/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "saranshg-test",
            "self_link": "https://www.googleapis.com/compute/v1/projects/saranshg-test/global/routes/host-network-1-restricted-googleapis",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-host.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-host[0]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/subnetwork-1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-26T09:50:11.558-07:00",
            "description": "Terraform-managed.",
            "gateway_address": "10.0.0.1",
            "id": "projects/saranshg-test/regions/us-central1/subnetworks/subnetwork-1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "subnetwork-1",
            "network": "https://www.googleapis.com/compute/v1/projects/saranshg-test/global/networks/host-network-1",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "saranshg-test",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/saranshg-test/regions/us-central1/subnetworks/subnetwork-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc-host.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}